--- a/index.html
+++ b/index.html
@@ -5,26 +5,26 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>
-    Safe Vision
+    Safe Vision AI
   </title>
 
   <meta
     name="description"
-    content="SafeVision — AI asosidagi qurilish xavfsizligi monitoring tizimi. Helmet va vest aniqlash, yong'in va tutunni aniqlash, ishchilarni tracking qilish va Telegram orqali real-time ogohlantirish."
+    content="Safe Vision AI — AI asosidagi qurilish xavfsizligi monitoring tizimi. Helmet va vest aniqlash, yong'in va tutunni aniqlash, ishchilarni tracking qilish va Telegram orqali real-time ogohlantirish."
   />
   <meta
     name="keywords"
     content="SafeVision, qurilish xavfsizligi, sun’iy intellekt, AI monitoring, helmet detection, vest detection, yong'in aniqlash, tutun aniqlash, ishchi tracking, real-time video monitoring"
   />
-  <meta name="author" content="SafeVision AI Team" />
+  <meta name="author" content="Safe Vision AI Team" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="http://safevision.uz/" />
   <link rel="icon" type="image/png" href="/favicon.png" />
   <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
+  
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="SafeVision" />
-  <meta property="og:title" content="SafeVision — AI asosida qurilish xavfsizligi" />
+  <meta property="og:title" content="Safe Vision AI — AI asosida qurilish xavfsizligi" />
   <meta
     property="og:description"
     content="Qurilish maydonlarini AI orqali real-time nazorat qilish. Helmet, vest, yong'in va tutun aniqlash."
